# media-pi

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Makefile  pyproject.toml
.github/workflows/: ci.yml  deploy.yml  release.yml
deploy/: media-pi-daemon.service  media-pi-netcheck.service  media-pi-netcheck.timer  wifi-powersave-off.conf
docs/: daemon.md  database.md  pi-setup.md
docs/adr/: 000-initial decisions.md  001-pi-libx264-reencode.md  002-event-data-fetching.md  AGENTS.md
docs/informational/: record-compression-upload-decisions.md
scripts/: init_db.py  install-dev-deps.sh  install-netcheck.sh  netcheck.sh  seed.py  seed_constants.py
scripts/core/: record.sh
src/core/: fetch_events.sh  record.sh  schema.sql  upload.sh
src/daemon/: __main__.py  db.py  pipeline.py  process.py  record_start.py
src/tui/: app.py  controls.py  db.py  failed_uploads.py  formatters.py  panel.py  paths.py  queries.py  status.py  styles.tcss  video_table.py
src/tui/widgets/: confirm.py  controls.py  failed_uploads.py  mixins.py  panel.py  status.py  video_table.py
