[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "media-pi"
version = "0.4.0"
dependencies = [
    "textual",
    "watchfiles",
]

[project.scripts]
tui = "tui.app:main"
daemon = "daemon.__main__:main_sync"

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]

[tool.semantic_release]
tag_format = "v{version}"
changelog_file = "CHANGELOG.md"
version_toml = ["pyproject.toml:project.version"]
major_on_zero = false
allow_zero_version = true

[tool.semantic_release.branches.main]
match = "main"
prerelease = false

[tool.semantic_release.commit_parser_options]
allowed_tags = ["feat", "fix", "perf", "refactor", "style", "test", "docs", "build", "ci", "chore"]
minor_tags = ["feat"]
patch_tags = ["fix", "perf"]
